syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

import "events.proto";

option csharp_namespace = "Valmar";

package scenes;

// The greeting service definition.
service Scenes {
  
  // Gets all scenes
  rpc GetAllScenes (google.protobuf.Empty) returns (stream SceneReply);

  // Gets all scenes
  rpc GetSceneById (GetSceneRequest) returns (SceneReply);
}

// Response containing a scene's properties.
message SceneReply {
  string name = 1;
  string url = 2;
  int32 id = 3;
  google.protobuf.Int32Value eventId = 4;
  google.protobuf.StringValue primaryColor = 5;
  google.protobuf.StringValue guessedColor = 6;
  google.protobuf.StringValue artist = 7;
}

// Request containing a scene id
message GetSceneRequest {
  int32 id = 1;
}
